--- a/02-3_aplicacion.tex
+++ b/02-3_aplicacion.tex
@@ -1,16 +1,29 @@
 \chapter{Aplicación Web}
 \label{cap:aplicacion}
 
-Parte importante del trabajo se basó en el desarrollo de una aplicación Web para presentar la información en tiempo real. Esta aplicación debía permitir a los usuarios identificar las características de los eventos rápidamente.
+Parte del trabajo realizado en esta tesis consiste en el desarrollo de una aplicación Web para presentar la información en tiempo real. 
 %
-Además, para los usuarios e investigadores es muy valioso tener la posibilidad de explorar datos históricos. Para cumplir con este objetivo la aplicación permite pausar el refresco de información y cargar datos recopilados para fechas anteriores. 
+El objetivo principal del desarrollo de esta aplicación no es el diseño del software ni de las interfaces, si no más bien, poner en producción una prueba de concepto que permite validar su utilidad como herramienta de apoyo para los sismólogos del Centro Sismológico Nacional.
+
+
+La aplicación debía permitir a los usuarios identificar las características de los eventos rápidamente, es decir, identificar la hora y el lugar donde ocurre el sismo y el impacto que tuvo en la red social.
+%
+Además, para los usuarios e investigadores es muy valioso tener la posibilidad de explorar datos históricos. Para cumplir con este objetivo la aplicación permite pausar el refresco de información y cargar datos recopilados para fechas anteriores.  
 %
 La aplicación está disponible en \url{http://www.twicalli.cl}.
 
-A continuación se explican las visualizaciones utilizadas para presentar la información, el diseño que integra cada una de las partes y las interacciones disponibles para que el usuario explore los datos.
+%A continuación se explican las visualizaciones utilizadas para presentar la información, el diseño que integra cada una de las partes y las interacciones disponibles para que el usuario explore los datos.
 
 \section{Visualización de datos}
 \label{sec:visualizacion}
+
+La información que se desea presentar en la aplicación Web consiste principalmente en datos geográficos y temporales. 
+%
+En la prueba de concepto desarrollada se proponen algunas visualizaciónes básicas para que los usuarios identifiquen rápidamente cuándo está ocurriendo un sismo, dónde se percibe y lo que las personas están comentando al respecto.
+%
+En esta sección se explica en qué consiste cada una de estas visualizaciones.
+
+
 	\subsection{Temporales}
 	
 	\begin{figure}[ht]
