Add all Barbara's comments except the conclusions

--- a/00_introduccion.tex
+++ b/00_introduccion.tex
@@ -213,9 +213,9 @@ En el capítulo \ref{cap:marco} se definen algunos conceptos utilizados a lo lar
 %
 Luego, en el capítulo \ref{cap:deteccion} se explica el algoritmo de detección de sismos implementado. 
 %
-En el capítulo \ref{cap:arquitectura} se describe la arquitectura completa del sistema desarrolado. 
+En el capítulo \ref{cap:arquitectura} se describe la arquitectura completa del sistema desarrollado. 
 %
-En los capítulos \ref{cap:sentimiento} y \ref{cap:geocodificacion} se describen brevemente el trabajo realizado en relación con análisis de sentimiento de los \textit{tweets} y geolocalización. 
+En el capítulo \ref{cap:procesamiento} se describe el trabajo realizado en relación con análisis de sentimiento de los \textit{tweets} y geolocalización. 
 % 
 En el capítulo \ref{cap:aplicacion} se presenta la aplicación Web desarrollada y las visualizaciones utilizadas para presentar la información. 
 %
