--- a/01_teoria.tex
+++ b/01_teoria.tex
@@ -108,7 +108,7 @@ Uno de los objetivos de esta tesis es proveer una solución ligera que requiera 
 %
 Es por esto que en esta tesis se ha extendido el trabajo de Guzmán y Poblete, para entre otras cosas, generalizarlo a una versión que sea capaz de detectar dentro de señales construidas en base a varios términos y proponer una metodología formal para determinar la ocurrencia de un sismos (o evento).
 %
-En el capítulo \ref{sec:deteccion} se detalla la adaptación realizada a la solución original. 
+En el capítulo \ref{cap:deteccion} se detalla la adaptación realizada a la solución original. 
 
 \section{Uso de redes sociales durante eventos de crisis}
 \label{sec:desastres}
