--- a/02-3_aplicacion.tex
+++ b/02-3_aplicacion.tex
@@ -19,9 +19,9 @@ La aplicación está disponible en \url{http://www.twicalli.cl}.
 
 La información que se desea presentar en la aplicación Web consiste principalmente en datos geográficos y temporales. 
 %
-En la prueba de concepto desarrollada se proponen algunas visualizaciónes básicas para que los usuarios identifiquen rápidamente cuándo está ocurriendo un sismo, dónde se percibe y lo que las personas están comentando al respecto.
+En la prueba de concepto desarrollada se proponen algunas visualizaciones básicas para que los usuarios identifiquen rápidamente cuándo está ocurriendo un sismo, dónde se percibe y lo que las personas están comentando al respecto.
 %
-En esta sección se explica en qué consiste cada una de estas visualizaciones.
+En esta sección se explican las visualizaciones.
 
 
 	\subsection{Temporales}
@@ -65,7 +65,7 @@ En esta sección se explica en qué consiste cada una de estas visualizaciones.
   	\end{figure}
 	 	
 	  	
-	Como se mencionó en el capítulo \ref{cap:geocodificacion} se intenta obtener la mayor cantidad posible de información geográfica. 
+	Como se mencionó en la sección \ref{sec:geocodificacion} se intenta obtener la mayor cantidad posible de información geográfica. 
 	%
 	Esto es muy útil ya que, a pesar de no ser 100\% confiable, entrega una buena aproximación de la percepción de un sismo. 
 	%
