--- a/04_casos.tex
+++ b/04_casos.tex
@@ -1,6 +1,15 @@
 \chapter{Casos de Estudio}
 \label{cap:casos}
 
+Es interesante realizar una evaluación simple, al menos de una forma empírica, de la utilidad de la aplicación Web. 
+
+La aplicación complementa el desarrollo de la metodología de detección propuesta e intenta presentar la información junto a su contexto, es decir, evitando reducir la detección a una alerta de sismo, si no más bien, presentar los datos recolectados de la forma más completa e intuitiva posible para que los usuarios puedan interpretar su significado y determinar su utilidad.
+
+En este capítulo se presentan algunos casos de estudio que muestran cómo se visualizó la información en la aplicación Web durante algunos sismos. 
+Los casos presentados corresponden a un sismo en Chile, algunos casos de sismos en otros países y además se incluye un caso correspondiente a un caso falso positivo.
+
+Finalmente se incluye una breve conclusión respecto a la utilidad de la aplicación Web.
+
 	\section{Caso I: Sismo al sur de Chile}	
 	
 	\begin{figure}[!h]
@@ -212,4 +221,9 @@ El terremoto de Chiapas de 2017 ocurrido 04:49:18, del jueves 8 de Septiembre (h
 	
 	A pesar de que se identificaron casos de ese tipo, al presentar características muy similares a las de un sismo real, no se tomaron medidas para filtrarlos. Sin embargo, gracias a la disposición de los elementos en la aplicación Web, se puede identificar fácilmente, mediante la lectura de algunos de los mensajes publicados, que no se trata de un sismo real, si no más bien de un simulacro masivo. 
 	
+	
+\section{Conclusión}
+\label{sec:conclusion}
+
+\jm{agregar conclusión}
 	
