--- a/05_conclusion.tex
+++ b/05_conclusion.tex
@@ -1,6 +1,10 @@
 \begin{conclusion}
 \label{cap:conclusion}	
 
+\jm{Complementar conclusión con discusión y conclusion de los casos de estudio}
+\jm{Contrastar resultados con los objetivos específicos}
+\jm{Agregar trabajo futuro}
+
 Se ha presentado un enfoque simple y eficiente para la detección de sismos basada en sensores sociales. El enfoque propuesto difiere de otros trabajos existentes en que es un modelo no supervisado y tolerante al ruido de los mensajes, permitiendo de esta forma, monitorizar eventos en todo el mundo y en diferentes idiomas. La parametrización inicial es de bajo costo, ya que no necesita conjuntos de mensajes etiquetados ni procesos de entrenamiento. Además, se adapta automáticamente en el tiempo dependiendo de las variaciones en la velocidad de llegada de los mensajes de interés. Los experimentos realizados muestran que el algoritmo propuesto es competitivo en relación al estado del arte, mejorando tanto la precisión como el {\em recall}. Al ser tolerante al ruido, es capaz de retener un número mayor de mensajes sin afectar la detección, los que son utilizados para la descripción de los eventos. Al tener más mensajes es posible describir los eventos de forma más detallada y diferenciar, por ejemplo, cuando ocurren dos eventos consecutivos en lugares diferentes. Esto contribuye a crear catálogos más completos. El enfoque de detección de sismos en base a sensores sociales está limitado por la cobertura geográfica de Twitter y por lo tanto no será posible detectar sismos rápidamente en áreas que no estén habitadas por usuarios de Twitter. 
 
 Por otro lado, se desarrolló una aplicación Web que despliega la información obtenida en tiempo real. Esta aplicación es utilizada por el Centro Sismológico Nacional de la Universidad de Chile (CSN) y por el Servicio Hidrográfico y Oceanográfico de la Armada de Chile (SHOA) para complementar sus fuentes de información durante eventos sísmicos. 
