--- a/04_casos.tex
+++ b/04_casos.tex
@@ -222,8 +222,16 @@ El terremoto de Chiapas de 2017 ocurrido 04:49:18, del jueves 8 de Septiembre (h
 	A pesar de que se identificaron casos de ese tipo, al presentar características muy similares a las de un sismo real, no se tomaron medidas para filtrarlos. Sin embargo, gracias a la disposición de los elementos en la aplicación Web, se puede identificar fácilmente, mediante la lectura de algunos de los mensajes publicados, que no se trata de un sismo real, si no más bien de un simulacro masivo. 
 	
 	
-\section{Conclusión}
-\label{sec:conclusion}
+\section{Utilidad de la aplicación}
+\label{sec:conclusionCasos}
 
-\jm{agregar conclusión}
+	Los casos presentados en este capítulo pretenden ejemplificar el modo de uso de la aplicación. En los casos presentados aquí se puede observar que es posible identificar cuándo comienza un sismo y el sector en donde se percibe, todo esto gracias a los comentarios que las personas publican en Twitter. Además, para sismos de gran magnitud se puede observar cuánto tiempo perdura la discusión del evento en Twitter y cómo se viraliza la información hacia otros países.
+
+	La información disponible es suficiente para desambiguar los casos falsos positivos o la información irrelevante. 
+	
+	Por otro lado, el modo de exploración de la aplicación permite volver a alguna fecha específica y realizar este tipo de análisis con otros sismos que hayan ocurrido dentro del periodo desde que la aplicación se puso en marcha.
+	
+	Los usuarios del Centro Sismológico Nacional de Universidad de Chile se encuentran satisfechos con el resultado y lo mantienen desplegado en una de las pantallas del centro de operaciones. Utilizan la aplicación como una fuente de información paralela que ayuda a contrastar rápidamente la información de la intensidad de los sismos que reciben desde la ONEMI. Además, el SHOA, institución que se encarga del monitoreo hidrográfico y oceanográfico de Chile, también se interesó por la aplicación y visitan regularmente el sitio. 
+	
+	Este prototipo Web es la única plataforma de carácter abierto que está actualmente disponible en internet y que presenta este tipo de información en tiempo real. Es por esto que la puesta en marcha del sistema ocasionó múltiples reacciones en la prensa Chilena y en algunos medios internacionales, algunos de ellos mencionados en el \nameref{anexo:prensa}.
 	
