--- a/memoria.tex
+++ b/memoria.tex
@@ -85,5 +85,7 @@ Durante el periodo de trabajo de esta tesis se publicó un artículo en la confe
 
 \input{06_anexo.tex} % evaluación por países
 \input{07_anexo.tex} % paper HCOMP 2017
+\input{08_anexo.tex} % menciones en la prensa
+\input{09_anexo.tex} % especificación de la base de datos
 
 \end{document}
